RBA-40: Fix boxes overlapping

--- a/whyAnalysis.css
+++ b/whyAnalysis.css
@@ -115,6 +115,9 @@ svg {
 .green {
     fill: #3c763d;
 }
+.purple {
+    fill: #4b0082;
+}
 .lightRed {
     fill: #f2dede;
 }
